mi primer commit

--- a/prueba.html/prueba.html
+++ b/prueba.html/prueba.html
@@ -3,13 +3,13 @@
     <title>Hola mundo</title>
 </head>
 <body>
-    <h1>tecnologia de punta</h1>
+    <h1>Tecnologia De Punta</h1>
     <i> Definicion y acaracteristicas</i><br>
      <img src= "asset/tecn.jpg" width="300" height="300"> <br>
     <p> La tecnología de punta es aquella que representa el estado más avanzado en su campo,<br>
         desarrollada o perfeccionada recientemente. Se caracteriza por su capacidad para transformar industrias y mejorar la calidad de vida,<br>
         superando los estándares establecidos y ofreciendo soluciones más eficientes y efectivas. Este concepto abarca innovaciones que están en la vanguardia,<br>
-        como la inteligencia artificial, la biotecnología y las energías renovables. <br>
+        como la inteligencia artificial, la biotecnología y las energías renovables. <br> <br>
            <img src= "asset/tecn2.jpg" width="300" height="300"> <br>
     </p>
 </body>
